percent of men and woman covid

--- a/koreacovid.Rmd
+++ b/koreacovid.Rmd
@@ -38,9 +38,13 @@ with(kRdata, table(Sex, result))
 
 ## We create two bar charts - one based on frequency and the other on percent, use ggplot commands to do this
 
-`
+```{r}
+barchartGC(~result + Sex,data=kRdata)
+barchartGC(~result + Sex,data=kRdata, type="percent")
 
-  
+```
+
+ While there are still way much more woman than men.In this experiment there were more men dying from covid. 
 
 
 
